--- a/style.css
+++ b/style.css
@@ -8,6 +8,20 @@ body {
   /* color: #fff; */
 }
 
+img {
+  max-width: 100%;
+}
+
+/* ========== section ========== */
+section {
+  display: grid;
+  grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
+  gap: 1rem;
+  padding-block: 4rem;
+}
+
+/* ========== article ========== */
+
 article {
   display: grid;
   background-color: #341996;
@@ -16,8 +30,8 @@ article {
 
 article .overskrift {
   place-self: center;
-  font-size: 7.5rem;
-  margin-top: 110px;
+  font-size: 7.3rem;
+  margin-top: 90px;
   color: white;
   font-weight: bold;
 }
@@ -31,7 +45,6 @@ article .x {
 article .tekst {
   place-self: center;
   font-size: 4rem;
-  margin-top: 5px;
   margin-bottom: 30px;
   font-weight: 100;
 }
@@ -39,6 +52,38 @@ h1 {
   text-align: center;
   color: black;
   font-size: 3rem;
-  font-weight: 400;
-  margin-top: 70px;
+  font-weight: 100;
+  margin-top: 50px;
+}
+p {
+  /* text-align: center; */
+  /* max-width: 65ch; */
+  /* place-content: center; */
+  grid-column: 2;
+}
+
+.p_grid {
+  display: grid;
+  grid-template-columns: auto minmax(auto, 800px) auto;
+  text-align: center;
+}
+
+/* ========== gallery ========== */
+.gallery {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); */
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  order: -1;
+}
+
+/* ========== article ========== */
+.billedgrid {
+  grid-column: 2;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 1.5rem;
+  color: black;
+  background-color: white;
+  text-align: start;
 }
