--- a/style.css
+++ b/style.css
@@ -8,17 +8,20 @@ body {
   /* color: #fff; */
 }
 
-img {
+img,
+video {
   max-width: 100%;
+  display: block;
+  height: auto;
 }
 
 /* ========== section ========== */
-section {
+/* section {
   display: grid;
   grid-template-columns: 1fr minmax(auto, 1200px) 1fr;
   gap: 1rem;
   padding-block: 4rem;
-}
+} */
 
 /* ========== article ========== */
 
@@ -30,21 +33,25 @@ article {
 
 article .overskrift {
   place-self: center;
-  font-size: 7.3rem;
-  margin-top: 90px;
+  font-size: 3rem;
+  /* font-size: 7.3rem; */
+  /* margin-top: 90px; */
   color: white;
   font-weight: bold;
 }
 
 article .x {
   place-self: center;
-  font-size: 2rem;
-  margin-top: -25px;
+  font-size: 1rem;
+  /* font-size: 2rem; */
+  margin-top: 10px;
+  /* margin-top: -25px; */
   font-weight: 100;
 }
 article .tekst {
   place-self: center;
-  font-size: 4rem;
+  font-size: 2rem;
+  /* font-size: 4rem; */
   margin-bottom: 30px;
   font-weight: 100;
 }
@@ -60,6 +67,7 @@ p {
   /* max-width: 65ch; */
   /* place-content: center; */
   grid-column: 2;
+  margin-bottom: 50px;
 }
 
 .p_grid {
@@ -71,19 +79,83 @@ p {
 /* ========== gallery ========== */
 .gallery {
   display: grid;
-  /* grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); */
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  /* grid-template-columns: 1fr 1fr; */
   gap: 1rem;
   order: -1;
 }
+.gallery img {
+  /* height: 1%; */
+  object-fit: cover;
+}
 
 /* ========== article ========== */
-.billedgrid {
-  grid-column: 2;
+/* .grid {
+  /* grid-column: 2;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
   color: black;
-  background-color: white;
-  text-align: start;
+  text-align: start; */
+/* display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 10px;
+} */
+
+/* .billedgrid {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  gap: 20px;
+} */
+
+@media (min-width: 700px) {
+  .billedgrid {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    gap: 20px;
+    margin-top: 10px;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+  }
+
+  .grid2 {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    gap: 20px;
+    margin-top: 30px;
+  }
+  .medlem_tekst {
+    margin-right: 10px;
+  }
+  /* .gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    align-self: stretch;
+    object-fit: cover;
+  } */
+
+  .box-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+  article .overskrift {
+    font-size: 7.3rem;
+    margin-top: 90px;
+  }
+  article .x {
+    font-size: 2rem;
+    margin-top: -25px;
+  }
+  article .tekst {
+    font-size: 4rem;
+  }
+
+  video {
+    margin-block: 30px;
+  }
 }
